test/sema/improved_error_demo.dmz
// RUN: dmz %s -run 2>&1 | filecheck %s

fn main() -> void {
    let x = 10;
    let y = x + unknown_symbol;
}
// CHECK: error: symbol 'unknown_symbol' not found
// CHECK-NEXT:  5 |     let y = x + unknown_symbol;
// CHECK-NEXT:    |                 ^^^^^^^^^^^^^^